Alteração de modals

--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@ Author URL:
 						<div class="img_text_ls px-4">
 							<h4>Lavagem à mão</h4>
 							<span> </span>
-							<p class="text-white"> Realizada manualmente utilizando xampus apropriados de primeira qualidade, com componentes que não afetam o meio ambiente, com um acessório que pode ser um pano, uma esponja ou uma luva de pelos. Auxiliado por uma lavadora móvel de pressão para lançar a água e espuma de lavagem. </p>
-							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
+							<p class="text-white"> Realizada manualmente utilizando xampus apropriados de primeira...</p>
+							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#modalMao">
 								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
@@ -361,8 +361,8 @@ Author URL:
 						<div class="img_text_ls px-3">
 							<h4>Limpeza Ecologica</h4>
 							<span> </span>
-							<p class="text-white"> Na Limpeza Ecológica, o produto utilizado é um líquido composto entre outros por cera de carnaúba e 300ml de água.  </p>
-							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
+							<p class="text-white"> Na Limpeza Ecológica, o produto utilizado é um líquido...</p>
+							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#ModalEco">
 								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
@@ -376,8 +376,8 @@ Author URL:
 						<div class="img_text_ls px-4">
 							<h4>Limpeza Delivery</h4>
 							<span> </span>
-							<p class="text-white">Modalidade de limpeza em que o lava-rápido dispõe de um serviço de lavagem a seco que vai ao local escolhido pelo proprietário. Esta modalidade prioriza a conveniência do proprietário e economia de tempo de descolamento. </p>
-							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
+							<p class="text-white">Modalidade de limpeza em que o lava-rápido dispõe de um serviço de ...</p>
+							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#ModalDelivery">
 								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
@@ -389,8 +389,8 @@ Author URL:
 						<div class="img_text_ls px-3">
 							<h4>Enceramento de Pintura</h4>
 							<span> </span>
-							<p class="text-white">Processo de aplicação de cera sobre a pintura que preenche pequenas irregularidades da superfície e forma uma película de proteção. Resgatar o brilho da pintura, facilita a remoção de sujeiras e protege a lataria contra sujeiras do cotidiano. </p>
-							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
+							<p class="text-white">Processo de aplicação de cera sobre a pintura que ...</p>
+							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#ModalCera">
 								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
@@ -404,8 +404,8 @@ Author URL:
 						<div class="img_text_ls px-3">
 							<h4>Lavagem Automatica </h4>
 							<span> </span>
-							<p class="text-white">Realizada inteiramente por máquina, sem a intervenção de pessoas no processo de lavagem. O percorre um túnel de lavagem por uso de esteiras automáticas. É o processo de lavagem mais rápido, durando em geral menos de 5 minutos, o motorista tem a opção de permanecer dentro do veículo. </p>
-							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
+							<p class="text-white">Realizada inteiramente por máquina, sem a...</p>
+							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#ModalAuto">
 								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
@@ -417,8 +417,8 @@ Author URL:
 						<div class="img_text_ls px-4">
 							<h4>Serviço completo</h4>
 							<span> </span>
-							<p class="text-white">Serviço completo que dispõe de lavagem e enceramento do carro. </p>
-							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#exampleModalCenter">
+							<p class="text-white">Serviço completo que dispõe de lavagem e enceramento do carro... </p>
+							<button type="button" class="btn btn-primary seri-ls text-white my-4" data-toggle="modal" data-target="#ModalCompleto">
 								Leia mais
 								<i class="fas fa-long-arrow-alt-right ml-2"></i>
 							</button>
@@ -429,27 +429,126 @@ Author URL:
 		</div>
 	</div>
 	<!-- Modal -->
-	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal fade" id="modalMao" tabindex="-1" role="dialog" aria-labelledby="modalMaoTitle" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalCenterTitle">Car Wash</h5>
+					<h5 class="modal-title" id="modalMaoTitle">Lavagem a mão</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
 				<div class="modal-body">
 					<img src="images/g1.jpg" alt=" " class="img-fluid">
-					<h5 class="text-capitalize my-3">we give best services</h5>
-					<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, quis nostrud exercitation ullamco laboris nisi ut
-						aliquip ex ea commodo consequat.</p>
+					<p>Realizada manualmente utilizando xampus apropriados de primeira qualidade, com componentes que não afetam o meio ambiente, com um acessório que pode ser um pano, 
+						uma esponja ou uma luva de pelos. Auxiliado por uma lavadora móvel de pressão para lançar a água e espuma de lavagem.</p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class="modal fade" id="ModalEco" tabindex="-1" role="dialog" aria-labelledby="ModalEcoTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="ModalEcoTitle">Limpeza Ecologica</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<img src="images/g4.jpg" alt=" " class="img-fluid">
+					<p>Na Limpeza Ecológica, o produto utilizado é um líquido composto entre outros por cera de carnaúba e o grande diferencial 
+						utilzam-se apenas 300ml de água, pois o foco é o mínimo desperdicio possível, pensando sempre no bem do meio ambeiente.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="ModalDelivery" tabindex="-1" role="dialog" aria-labelledby="ModalDeliveryTitle" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="ModalDeliveryTitle">Limpeza Delivery</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<img src="images/g2.jpg" alt=" " class="img-fluid">
+						<p> Modalidade de limpeza em que o lava-rápido dispõe de um serviço de lavagem a seco que vai ao local escolhido pelo proprietário. 
+							Esta modalidade prioriza a conveniência do proprietário e economia de tempo de descolamento. </p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal fade" id="ModalCera" tabindex="-1" role="dialog" aria-labelledby="ModalCeraTitle" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="ModalCeraTitle">Enceramento de Pintura</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<img src="images/g5.jpg" alt=" " class="img-fluid">
+							<p> Processo de aplicação de cera sobre a pintura que preenche pequenas irregularidades da superfície e forma uma película de proteção.
+								 Resgatar o brilho da pintura, facilita a remoção de sujeiras e protege a lataria contra sujeiras do cotidiano. </p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="modal fade" id="ModalAuto" tabindex="-1" role="dialog" aria-labelledby="ModalAutoTitle" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="ModalAutoTitle">Lavagem Automática</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<img src="images/b2.jpg" alt=" " class="img-fluid">
+								<p> Realizada inteiramente por máquina, sem a intervenção de pessoas no processo de lavagem. O automovel percorre um túnel de lavagem por uso de esteiras automáticas. 
+									É o processo de lavagem mais rápido, durando em geral menos de 5 minutos e o motorista tem a opção de permanecer dentro do veículo. </p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal fade" id="ModalCompleto" tabindex="-1" role="dialog" aria-labelledby="ModalCompletoTitle" aria-hidden="true">
+						<div class="modal-dialog modal-dialog-centered" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="ModalAutoTitle">Serviço completo</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									<img src="images/g3.jpg" alt=" " class="img-fluid">
+									<p> Serviço completo que dispõe de lavagem e enceramento do carro. Criado especialmente para melhor atender o cliente e para darmos o nosso melhor 
+										para agrada-lo sempre. </p>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+								</div>
+							</div>
+						</div>
+					</div>
 	<!-- //Modal -->
 	<!-- //services -->
 
