feat: edit_dashboard.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Author URL:
 						</div>
 						<div class="modal-footer">
 							<button type="submit" class="btn btn-light">Registrar</button>
-							<button type="submit" class="btn btn-success">Entrar</button>
+							<button type="submit" class="btn btn-success"> <a href="dash/dashboard.html">Entrar</a></button>
 						</div>
 					</div>
 				</div>
@@ -115,9 +115,9 @@ Author URL:
 								<li>
 									<a href="#contact" class="scroll">Fale Conosco</a>
 								</li>
-								<li>
+								<!-- <li>
 									<a href="dash/dashboard.html">Dashboard</a>
-								</li>
+								</li> -->
 								<li>
 									<button class="btn btn-danger" data-toggle="modal" data-target="#loginWeb"><i class="far fa-user"></i> Login</button>
 								</li>
