--- a/dash/register.html
+++ b/dash/register.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Register</title>
+  <title>Cadastro de Veículo</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -32,46 +32,55 @@
           <div class="col-lg-7">
             <div class="p-5">
               <div class="text-center">
-                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                <h1 class="h4 text-gray-900 mb-4">Cadastro de Veículo</h1>
               </div>
               <form class="user">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">
+                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Primeiro Nome">
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
+                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Último Nome">
+                  </div>
+                  
+                  <div class="col-sm-6">
+                    <p></p>
+                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Modelo">
+                  </div>
+                  <div class="col-sm-6">
+                    <p></p>
+                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Placa">
                   </div>
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Address">
+                  <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="E-mail para contato">
                 </div>
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Digite sua senha.">
                   </div>
                   <div class="col-sm-6">
-                    <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password">
+                    <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Digite sua senha novamente.">
                   </div>
-                </div>
+                </div> -->
                 <a href="login.html" class="btn btn-primary btn-user btn-block">
-                  Register Account
+                  Cadastrar Veículo
                 </a>
                 <hr>
-                <a href="index.html" class="btn btn-google btn-user btn-block">
+                <!-- <a href="index.html" class="btn btn-google btn-user btn-block">
                   <i class="fab fa-google fa-fw"></i> Register with Google
                 </a>
                 <a href="index.html" class="btn btn-facebook btn-user btn-block">
                   <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-                </a>
+                </a> -->
               </form>
               <hr>
-              <div class="text-center">
-                <a class="small" href="forgot-password.html">Forgot Password?</a>
+              <!-- <div class="text-center">
+                <a class="small" href="forgot-password.html">Esqueceu a senha?</a>
               </div>
               <div class="text-center">
                 <a class="small" href="login.html">Already have an account? Login!</a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
