feat: alteando forms

--- a/dash/forgot-password.html
+++ b/dash/forgot-password.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Forgot Password</title>
+  <title>Tipo de lavagens</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,24 +37,25 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
-                    <p class="mb-4">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
+                    <h1 class="h4 text-gray-900 mb-2">Tipo de lavagens</h1>
+                    <p></p>
                   </div>
                   <form class="user">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                      <select class="custom-select">
+                            <option selected>Serviços</option>
+                            <option value="1">Lavagem à mão</option>
+                            <option value="2">Limpeza Ecológica</option>
+                            <option value="3">Limpeza Delivery</option>
+                            <option value="4">Enceramento de pintura</option>
+                      </select>
+                      <!-- <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..."> -->
                     </div>
-                    <a href="login.html" class="btn btn-primary btn-user btn-block">
-                      Reset Password
+                    <a href="dashboard.html" class="btn btn-primary btn-user btn-block">
+                     Solicite agora
                     </a>
                   </form>
                   <hr>
-                  <div class="text-center">
-                    <a class="small" href="register.html">Create an Account!</a>
-                  </div>
-                  <div class="text-center">
-                    <a class="small" href="login.html">Already have an account? Login!</a>
-                  </div>
                 </div>
               </div>
             </div>
