--- a/dash/dashboard.html
+++ b/dash/dashboard.html
@@ -98,18 +98,18 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
-          <span>Pages</span>
+          <span>Serviços - TabaJara</span>
         </a>
         <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
-            <a class="collapse-item" href="login.html">Login</a>
-            <a class="collapse-item" href="register.html">Register</a>
-            <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-            <div class="collapse-divider"></div>
+            <h6 class="collapse-header">Serviços:</h6>
+            <a class="collapse-item" href="login.html">Registro de entrada</a>
+            <a class="collapse-item" href="register.html">Cadastrar Veículo</a>
+            <a class="collapse-item" href="forgot-password.html">Tipos de Lavagens</a>
+            <!-- <div class="collapse-divider"></div>
             <h6 class="collapse-header">Other Pages:</h6>
             <a class="collapse-item" href="404.html">404 Page</a>
-            <a class="collapse-item" href="blank.html">Blank Page</a>
+            <a class="collapse-item" href="blank.html">Blank Page</a> -->
           </div>
         </div>
       </li>
@@ -118,7 +118,7 @@
       <li class="nav-item">
         <a class="nav-link" href="charts.html">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Charts</span></a>
+          <span>Resumo de lucros</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
@@ -531,7 +531,7 @@
                   <div class="card bg-primary text-white shadow">
                     <div class="card-body">
                       Primary
-                      <div class="text-white-50 small">#4e73df</div>
+                      <div class="text-white-50 small">#ff5252</div>
                     </div>
                   </div>
                 </div>
